# lqr_ctrl

./: CMakeLists.txt  LICENSE  README.md
include/: lqr.h
install/: local_setup.sh  setup.sh
install/ctrl_ws/include/: lqr  lqr.h
install/ctrl_ws/lib/ctrl_ws/: lqr_implement
install/ctrl_ws/share/ament_index/resource_index/package_run_dependencies/: ctrl_ws
install/ctrl_ws/share/ament_index/resource_index/parent_prefix_path/: ctrl_ws
install/ctrl_ws/share/ctrl_ws/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ctrl_ws/share/ctrl_ws/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ctrl_wsConfig-version.cmake  ctrl_wsConfig.cmake
install/ctrl_ws/share/ctrl_ws/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ctrl_ws/share/ctrl_ws/script/: irb140.lua
log/: latest_build
scenes/: irb140_forlqrtrial.ttt
script/: irb140.lua
src/: ctrl_node.cpp  lqr.cpp
